--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emailjs/browser": "^3.11.0",
     "@react-three/drei": "^9.65.5",
     "@react-three/fiber": "^8.12.2",
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.4",
     "maath": "^0.5.3",
     "react": "^18.2.0",
+    "react-calendar-heatmap": "^1.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-tilt": "^1.0.2",
